syntax = "proto3";

package customer;

option go_package = "github.com/DuongVu089x/interview/customer/proto/customer";

service CustomerService {
  rpc GetCustomer (GetCustomerRequest) returns (GetCustomerResponse) {}
  rpc Check (HealthCheckRequest) returns (HealthCheckResponse) {}
}

message GetCustomerRequest {
  string user_id = 1;
}

message GetCustomerResponse {
  Customer customer = 1;
  bool exists = 2;
}

message Customer {
  string id = 1;
  string name = 2;
  string email = 3;
  string phone = 4;
  string created_at = 5;
  string updated_at = 6;
}

message HealthCheckRequest {}

message HealthCheckResponse {
  enum ServingStatus {
    UNKNOWN = 0;
    SERVING = 1;
    NOT_SERVING = 2;
  }
  ServingStatus status = 1;
  string error = 2;
}
